Feature: Change selection box to store enum values as the value and show the displayText as a text. Create a hidden input for the skills.
Signed-off-by: Ryan <rha206@uclive.ac.nz>