@@ -1,8 +1,8 @@
 package nz.ac.canterbury.seng302.homehelper.entity.users;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public enum Skill {
@@ -100,7 +100,7 @@ public enum Skill {
         return Stream.of(Skill.values()).filter(skill -> Objects.equals(skill.getDisplayName(), displayName)).findFirst().orElse(null);
     }
 
-    public static List<String> listOfSkills() {
-        return Stream.of(Skill.values()).map(Skill::getDisplayName).sorted(String::compareToIgnoreCase).collect(Collectors.toList());
+    public static List<Skill> listOfSortedSkills() {
+        return Arrays.stream(Skill.values()).sorted((a, b) -> a.getDisplayName().compareToIgnoreCase(b.getDisplayName())).toList();
     }
 }
